name:                igl
version:             0.1.0.0
synopsis:            Indexed OpenGL; a safer OpenGL Haskell implementation
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
copyright:           Dimitri Sabadie

category:            Graphics
build-type:          Simple

extra-source-files:  CHANGELOG.md

cabal-version:       >=1.10

library
  ghc-options:         -O2 -W -Wall

  exposed-modules:     Graphics.Rendering.IGL.Buffer
                     , Graphics.Rendering.IGL.GL
  
  default-extensions:  DataKinds
                     , PolyKinds
                     , TypeFamilies

  build-depends:       base    >= 4.8 && < 4.9
                     , indexed >= 0.1 && < 0.2
                     , gl      >= 0.7 && < 0.8
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010
